kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-api
  namespace: devops-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery-api
  template:
    metadata:
      labels:
        app: delivery-api
    spec:
      imagePullSecrets:
        - name: ecr-registry
      containers:
        - name: delivery-api
          image: ${IMAGE}
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
