kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-api
  namespace: devops-platform
spec:
  selector:
    app: delivery-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
